# rive-runtime

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .rive_head  Dockerfile  Dockerfile.recorder  Doxyfile  README.md  build.sh  make_dawn.sh  make_moltenvk.sh  make_swiftshader.sh  premake5.lua  premake5_pls_renderer.lua  premake5_v2.lua  runtime.natvis
assets/: copy_paste_test.riv  dependency_test.riv  fix_rectangle.riv  juice.riv  shapetest.riv  teeny_tiny_file_sizes.riv  two_artboards.riv
bubbles/: bubbles.cpp  index.html
canvas2d_renderer/: bindings.cpp  bindings_c2d.cpp  bindings_c2d.hpp  canvas2d_renderer.js
cg_renderer/: premake5.lua
decoders/: premake5_v2.lua
dependencies/: config_directories.sh  jconfig.h  make_dawn.sh  miniaudio.m  premake5_glfw_v2.lua  premake5_harfbuzz.lua  premake5_harfbuzz_v2.lua  premake5_libjpeg_v2.lua  premake5_libpng.lua  premake5_libpng_v2.lua  premake5_libwebp_v2.lua  premake5_microprofile.lua  premake5_miniaudio.lua  premake5_miniaudio_v2.lua  premake5_optick.lua  premake5_sheenbidi.lua  premake5_sheenbidi_v2.lua  premake5_yoga.lua  premake5_yoga_v2.lua  rive_harfbuzz_overrides.h  rive_harfbuzz_renames.h  rive_libjpeg_renames.h  rive_png_renames.h  rive_yoga_renames.h
dev/: analyze.sh  generate_core.sh  setup_premake.sh  test.bat  test.sh  update_defs.sh
glad/: glad.c  glad.h  glad_custom.c  glad_custom.h
include/: artboard.hpp  backboard.hpp  core.hpp  (+16 more)
vello/: Cargo.toml  README.md  build.rs
vello/src/: lib.rs  main.rs  rive.rs  util.rs  vello_renderer.cpp  vello_renderer.hpp  viewer.rs  winit_viewer.cpp
(+3854 files in other folders)
